2010-11-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (minibuffer-completion-help): Specify the end of the
	completion field (bug#7211).

	* progmodes/python.el (python-font-lock-syntactic-keywords): (bug#7322)
	Fix handling of backslash escapes.
	(python-quote-syntax): Adjust accordingly.

2010-11-08  Richard Levitte  <richard@levitte.org>  (tiny change)

	* vc-mtn.el (vc-mtn-working-revision, vc-mtn-after-dir-status)
	(vc-mtn-workfile-branch): Adjust to new output format.

2010-11-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/mule-cmds.el (princ-list): Mark as obsolete.

2010-11-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el: New package.

2010-11-06  Michael Albinus  <michael.albinus@gmx.de>

	* files.el (backup-by-copying-when-mismatch):
	Set `permanent-local' property.

	* net/tramp.el (tramp-handle-insert-file-contents): Do not set
	`permanent-local' property for `backup-by-copying-when-mismatch'.

2010-11-06  Eli Zaretskii  <eliz@gnu.org>

	* ls-lisp.el (insert-directory): Doc fix.  (bug#7285)
	(ls-lisp-classify-file): New function.
	(ls-lisp-insert-directory): Call it if switches include -F (bug#6294).
	(ls-lisp-classify): Call ls-lisp-classify-file.
	(insert-directory): Remove blanks from switches.

2010-11-07  Wilson Snyder  <wsnyder@wsnyder.org>

	* progmodes/verilog-mode.el (verilog-insert-one-definition)
	(verilog-read-decls, verilog-read-sub-decls-sig): Fix AUTOWIRE and
	AUTOINOUT for SV style multidimensional arrays, bug294.
	Reported by Eric Mastromarchi.
	(verilog-preprocess): Use with-current-buffer and
	font-lock-fontify-buffer to cleanup style issues.

2010-11-05  Michael Albinus  <michael.albinus@gmx.de>

	* net/trampver.el: Update release number.

2010-08-01  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* mouse.el (mouse-fixup-help-message): Match "mouse-2" only at the
	beginning of the string.  Use `string-match-p'.  (Bug#6765)

2010-11-01  Glenn Morris  <rgm@gnu.org>
